--- a/assets/style.css
+++ b/assets/style.css
@@ -196,8 +196,9 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%;
+            height: 1100px;
             object-fit: cover;
         }
+
 
 
