--- a/assets/style.css
+++ b/assets/style.css
@@ -200,5 +200,37 @@
             object-fit: cover;
         }
 
+	.flip-card {
+	        perspective: 1000px;
+                transform: scale(1);
+}
+	.flip-card-inner {
+	        position: relative;
+		width: 100%;
+		height: 100%;
+		transform-style: preserve-3d;
+		transition: transform 0.6s;
+ }
+		
+        .flip-card-inner:hover {
+            transform: scale(1.05);
+            opacity: 1;
+}
+	.flip-card.flipped .flip-card-inner {
+	        transform: rotateY(180deg);
+}
+	.flip-card-front, .flip-card-back {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		backface-visibility: hidden;
+		border-radius: 0.5rem;
+		overflow: hidden;
+}
+	.flip-card-back {
+		transform: rotateY(180deg);
+}
+
+
 
 
